# battalion

./: .gitignore  CHANGELOG.md  README.md  REPOSITORY_REALIGNMENT_REPORT.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
battalion/: __init__.py  agents.py  assessment.py  assurance.py  attributes.yml  classification.py  cli.py  default_attributes.yaml  dispatcher.py  evidence_report.py  executor_dispatch.py  intake.py  mission_analyst.py  mission_resolve.py  models.py  plan_review.py  playbooks.yml  reporting.py  storage.py
docs/: ROADMAP.md  development-workflow.md  repository-structure.md
docs/evidence/: 0002-plan-review-v1.md  0003-human-decision-ux-v1.md  0004-artifact-lifecycle-versioning-v1.md  0005-evidence-report-v1.md  0006-assessment-ux-v2.md  0007-dogfooding-friction-doctrine-v1.md  0008-semantic-planning-fallback-v1.md  0009-mission-intake-synthesis-interfaces-v1.md  0010-example-vs-requested-artifact-disambiguation-v1.md
docs/plans/: 0002-plan-review-v1.md  0003-human-decision-ux-v1.md  0004-artifact-lifecycle-versioning-v1.md  0005-evidence-report-v1.md  0006-assessment-ux-v2.md  0007-dogfooding-friction-doctrine-v1.md  0008-semantic-planning-fallback-v1.md  0009-mission-intake-synthesis-interfaces-v1.md
docs/retrospectives/: 0001-plan-template-v1.md  0002-plan-review-v1.md  0003-human-decision-ux-v1.md  0004-artifact-lifecycle-versioning-v1.md  0005-evidence-report-v1.md  0006-assessment-ux-v2.md  0007-dogfooding-friction-doctrine-v1.md  0008-semantic-planning-fallback-v1.md  0009-mission-intake-synthesis-interfaces-v1.md  0010-example-vs-requested-artifact-disambiguation-v1.md
doctrine/: README.md
examples/jwt-auth-mission/.battalion/: agents.yaml  events.jsonl  ledger.yaml  mission.yaml
examples/jwt-auth-mission/.battalion/reports/: issuer-validation-evidence.md  mission-report.md
playbooks/: README.md
review-signals/: README.md
skills/: README.md
src/: README.md
templates/: README.md
tests/: test_cli.py
