[build-system]
# Setuptools 64+ provides PEP 660 editable installs. The upper bound retains
# compatibility with pip 21's legacy editable-install fallback on Python 3.9.
requires = ["setuptools>=64,<70"]
build-backend = "setuptools.build_meta"

[project]
name = "battalion-cli"
version = "0.6.0"
description = "Deterministic mission assessment, planning, dispatch, and assurance"
requires-python = ">=3.9"
dependencies = ["PyYAML>=6.0,<7.0", "pytest>=8,<10"]

[project.scripts]
battalion = "battalion.cli:main"

[tool.setuptools.packages.find]
include = ["battalion*"]

[tool.setuptools.package-data]
battalion = ["attributes.yml"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
